[package]
name = "openbook-v2-cu"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "openbook_v2_cu"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
bytemuck = { version = "^1.7.2", features = ["derive", "min_const_generics"] }
num_enum = "0.5.1"
openbook-v2 = { git = "https://github.com/openbook-dex/openbook-v2", features = ["cpi"] }
solana-program = "~1.14.16"
static_assertions = "1.1"

[dev-dependencies]
solana-program-test = "~1.14.16"
solana-sdk = "~1.14.16"
